# ExpressionsCompiler

./: CMakeLists.txt  ExpressionsCompiler.sln  common.h  expression_compiler.cpp  expression_compiler.h  expression_evaluator.cpp  expression_evaluator.h  expression_parser.cpp  expression_parser.h  tests.cpp
ExpressionsCompiler/: ExpressionsCompiler.cpp  ExpressionsCompiler.h  ExpressionsCompiler.vcxproj  ExpressionsCompiler.vcxproj.filters  Main.cpp  stdafx.h
tests/: CMakeLists.txt  main.cpp
